# sysadmin

./: .gitignore  contributors.txt  pyproject.toml  requirements.txt
AWS/: pyproject.toml  update_sg.py  update_sg_rule_to_current_ip_by_tag.py
Cloud/AWS/: requirements.txt  update_sg_rule_to_current_ip_by_tag.py
DNS/: exportdns.py
Linux/: .screenrc  copyfiles.py  createlvmvolume.py  gcm-addkey.py  gcm-copyfile.py  installpbis.py  installpbis.sh  installrealm.py  tgzall.py  threaded_rsync.py  upd-vmplayer.sh  useraudit.py
NetApp/: README.md  build_html_page.py  check_azevents.py  check_filter.py  check_licenses.py  cluster_license_savings.py  cluster_usage.py  dump_cluster_metrics_dii.py  dump_event_log_csv.py  get_licenses.py  get_locks.py  maint_events.py  pyproject.toml  requirements.txt  run_cmd_cli.py  save_azevents_sqlite3.py  save_sqlite_to_excel.py  space_usage.py  test_filter.py  validate.py
NetApp/API/: build_html_page.py  cluster_usage.py  style.txt  validate.py
NetApp/API/libs/: cloud_utils.py  config.py  log.py  parseargs.py  size_utils.py
NetApp/API/space_usage/: space_usage.py  todo.txt  workbook.py
NetApp/CMode/: aggregatesdata.py  appdcustom.py  checkluns.py  checksnapvolsizes.py  checksoftlayerrestrictions.py  checkthinprovisioned.py  example.ini  exportshares.py  extraspaceusedbythickvolumes.py  findvolume.py  getallvolumedetails.py  getsecdheap-azure.py  getsecdheap.py  getvolumedetails.py  managesnaps.py  modifyvols.py  resetsecd.py  secdstress.py  snapsbeforedate.py  svmtotalvolsize.py  vol.py  volclone.py  volmount.py
NetApp/CMode/Cluster/: __init__.py  humanize.py  manager.py
NetApp/Cluster/: checksnapvolsizes.py  checkthinprovisioned.py  svmalltotalvolsize.py  svmtotalvolsize.py
NetApp/Cluster/NA/: NetApp.py  __init__.py  humanize.py
NetApp/devconfig/tmux/: netapp.tmuxp.yaml
NetApp/libs/: azevents_db.py  config.py  email.py  ems_db.py  import_utils.py  log.py  openapi.py  parseargs.py  time_utils.py
NetApp/libs/dii/: __init__.py
NetApp/libs/dii/api/: __init__.py
NetApp/libs/dii/api/lake/query/: timeseries.py
NetApp/libs/dii/lake/: __init__.py
NetApp/libs/dii/lake/query/: __init__.py  timeseries.py
NetApp/libs/ontap/api/: __init__.py
NetApp/libs/ontap/cli/: __init__.py
NetApp/libs/sqlite/: metrics_db.py
NetApp/space_usage/: space_usage.py
SoftLayer/: export-block.py  export-file.py  exportvols.py  getvol.py  softlayer-example.ini
SoftLayer/sl/: constants.py
VMWare/PowerCLI/: findvmbyip.ps1
VMWare/PowerCLI/functions/: add-disk.ps1  connect-vcenter.ps1  exportevents.ps1  findvmbyip.ps1  findvmbymac.ps1  findvmbynetwork.ps1
Windows/PowerShell/functions/: Load-PowerCLI.ps1
Windows/PowerShell/profiles/: Microsoft.PowerShellISE_profile.ps1  Microsoft.VSCode_profile.ps1
devconfig/tmux/: aws.tmuxp.yaml  netapp-api.tmuxp.yaml  sysadmin.tmuxp.yaml
