[project]
name = "NetAppScripts"
version = "0.1.0"
description = "NetApp scripts and Libraries for various tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.1",
    "netapp-ontap>=9.17.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "xlsxwriter>=3.2.9",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
extend-select = ["D", "E"]  # Enable PEP 257 docstring checks

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 88